re PR ipa/65287 (Current trunk ICE in address_matters_p, at symtab.c:1908)

PR ipa/65287
	* ipa-icf.c (sem_variable::parse): Skip all alias variables.
	* gcc.dg/ipa/pr65287.c: New test.

From-SVN: r221156